# rocq-ditto

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  configure.sh  constructive-plugin.opam  constructivisation-data-generator-plugin.opam  coq-ditto.opam  ditto-cli-lib.opam  ditto-config.opam  ditto-ninja.opam  ditto-plugin.opam  ditto-test-plugin.opam  dune  dune-project  example1.v  get-basic-tactics-plugin.opam  get-dependencies.opam  get-minim-deps.opam  json-dump-plugin.opam  lens-query-plugin.opam  neat-fcc-plugin.opam  rocq-ditto-benchmark.opam  rocq-ninja.opam  rocqdep-dot.opam  sexpdump-plugin.opam  shelley-plugin.opam  target-generator-plugin.opam
.github/workflows/: ci.yml
benchmarks/: dune  main.ml
config/: dune  print_coq_version.ml  print_rocq_version.ml
constructive_plugin/: main.ml
fcc_plugin/: dune  main.ml  transformations.ml
lib/: annotated_ast_node.ml  annotated_ast_node.mli  code_point.ml  code_point.mli  code_range.ml  code_range.mli  compile.ml  compile.mli  constrexpr_fold.ml  constrexpr_fold.mli  constrexpr_map.ml  constrexpr_map.mli  constrexpr_utils.ml  constrexpr_utils.mli  constructivisation.ml  constructivisation_data.ml  coqAst.ml  coqAst.mli  coqDocument.ml  coqDocument.mli  coq_ast.ml  coq_ast.mli  coq_document.ml  coq_document.mli  diagnostic_utils.ml  diagnostic_utils.mli  dune  error.ml  error.mli  expr_substitution.ml  expr_substitution.mli  filesystem.ml  filesystem.mli  goal_select_view.ml  goal_select_view.mli  goal_select_view.v  int_hash.ml  list_utils.ml  list_utils.mli  logging.ml  (+51 more)
plugins/constructive_plugin/: dune  main.ml
plugins/coq_ditto/: cli.ml  coq_ditto.ml  coq_ditto_plugin.ml  coq_ditto_wrapper.ml  dune  main.ml
plugins/ditto_plugin/: dune  main.ml
plugins/get_basic_tactics_plugin/: dune  main.ml
plugins/lens_query/: dune  lens.ml  lens.mli  main.ml  vernac_lenses.ml
plugins/neat_fcc/: dune  main.ml
plugins/project_ditto/: dune  main.ml
plugins/sexpdump/: dune  main.ml
plugins/shelley/: dune  main.ml
test/: dune  test_ast.ml  test_coq_ditto.ml  test_coq_document.ml  test_list_utils.ml  test_nary_tree.ml  test_range_utils.ml  test_syntax_node.ml
test/fixtures/: ex1.v  ex2.v  ex3.v  ex_adding1.v  ex_adding1_target.v  ex_adding2.v  ex_adding3.v  ex_adding5_target.v  ex_adding6_target.v  ex_admit.v  ex_auto1.v  ex_auto2.v  ex_auto2_target.v  ex_auto3.v  ex_auto5.v  ex_auto6.v  ex_auto7.v  ex_comment1.v  ex_comment3.v  ex_comment4.v  ex_comment5.v  ex_comment6.v  ex_compress_intro1.v  ex_definition_with_proof.v  ex_focus1.v  ex_goal1.v  ex_info.v  ex_instance1.v  ex_intro1.v  ex_intro2.v  ex_intro3.v  ex_intros_trans.v  ex_lia1.v  ex_lia2.v  ex_modification1.v  ex_move_bug.v  ex_offset.v  ex_oneliner1.v  ex_oneliner2.v  ex_proof_tree2.v  (+13 more)
test/fixtures/constructive/: ex1.v  ex2.v  ex3.v  ex4.v  ex5.v
test/fixtures/defensive/: ex1.v
test/fixtures/theorem_query_ex/: ex_subtree1.v  ex_subtree2.v  ex_subtree3.v
test/fixtures/unit_test_fixtures/: ex_abort1.v  ex_abort2.v  ex_adding2_target.v  ex_adding4.v  ex_adding4_target.v  ex_adding5.v  ex_adding5_target.v  ex_admit_oneliner_target.v  ex_assert_oneliner.v  ex_attach_line_after_end_target.v  ex_attach_line_before_end_target.v  ex_attach_same_line_end.v  ex_attach_same_line_end_target.v  ex_auto1.v  ex_auto1_target.v  ex_auto2.v  ex_cache_hit.v  ex_command_oneliner.v  ex_command_oneliner_target.v  ex_curly_braces_oneliner.v  ex_curly_braces_oneliner_target.v  ex_deducing_parameter_easy.v  ex_definition1.v  ex_explicit_apply.v  ex_explicit_apply_already_explicit_target.v  ex_explicit_apply_comma1.v  ex_explicit_apply_comma1_target.v  ex_explicit_apply_in_assert.v  ex_explicit_apply_in_assert_target.v  ex_explicit_apply_in_then.v  ex_explicit_apply_in_then_target.v  ex_explicit_apply_nothing_deducible_target.v  ex_explicit_apply_partial.v  ex_explicit_apply_partial_target.v  ex_explicit_apply_with_simple.v  ex_explicit_apply_with_simple_target.v  ex_explicit_assert.v  ex_explicit_assert_target.v  ex_explicit_induction.v  ex_explicit_induction_list.v  (+101 more)
test/fixtures/unused/: ex_assert_parenthesis_oneliner.v  ex_auto3.v  ex_auto4.v  ex_explicit_intro.v  ex_explicit_intro_distributed.v  ex_explicit_three_goals.v  ex_proof_oneline_oneliner.v  ex_proof_twoline_oneliner.v  not_included_in_adjacent.v
test/json_dump/: dune  main.ml
test/json_dump_plugin/: dune  main.ml
test/test_plugin/: dune  main.ml
test/test_target_generator_plugin/: dune  main.ml
tools/: dune  fixture_gen.ml  main.ml
tools/constructivisation_data_generator_plugin/: blacklist_reasons.txt  dune  main.ml
tools/ditto_ninja/: dune  main.ml
tools/get_minim_deps/: dune  main.ml
tools/rocq_ninja/: dune  main.ml
tools/rocqdep_dot/: dune  main.ml
