(alias
 (name runtest)
 (deps
  (glob_files "fixtures/*.v")
  (glob_files "fixtures/*.json")
  (alias fixture_gen)))

(rule
 (alias fixture_gen)       ; Attach this rule to the alias
 (deps (universe))
 (action
  (bash "find fixtures/ -name '*.v' -exec dune exec fixture_gen {} --profile=release \\;")))

(test
 (name test_ast)
 (deps (alias fixture_gen) (glob_files "fixtures/*.json"))
 (libraries alcotest ditto yojson findlib.dynload coq-lsp.serlib coq-lsp.coq))

