(test
 (name test_nary_tree)
 (package coq-ditto)
 (libraries ditto alcotest))

(test
 (name test_syntax_node)
 (package coq-ditto)
 (libraries ditto alcotest))

(test
 (name test_coq_document)
 (package coq-ditto)
 (libraries ditto alcotest))

(rule
 (alias runtest)
 (action (progn (run ./test_nary_tree.exe) (run ./test_syntax_node.exe) (run ./test_coq_document.exe) )))