(library
 (public_name ditto-cli-lib)
 (name ditto_cli_lib)
 (modules cli)
 (preprocess (pps ppx_deriving.show ppx_deriving.enum))
 (libraries coq-ditto logs logs.fmt )
)

(library
 (public_name ditto-plugin)
 (name ditto_plugin)
 (modules coq_ditto_plugin)
 (preprocess (pps ppx_deriving.show))
 (libraries coq-ditto ditto-cli-lib rocq-runtime.plugins.ltac coq-lsp.serlib.ltac coq-lsp.coq coq-lsp.fleche logs logs.fmt)
 (enabled_if (= "%{coq:version.major}" 9))
)

(library
 (public_name ditto-plugin)
 (name ditto_plugin)
 (modules coq_ditto_plugin )
 (preprocess (pps ppx_deriving.show ))
 (libraries coq-ditto ditto-cli-lib coq-core.plugins.ltac coq-lsp.serlib.ltac coq-lsp.coq coq-lsp.fleche logs logs.fmt)
 (enabled_if (< "%{coq:version.major}" 9))
)

(executable
 (name coq_ditto_wrapper)
 (package coq-ditto)
 (public_name coq-ditto)
 (modules coq_ditto_wrapper)
 (preprocess (pps ppx_deriving.show ppx_deriving.enum))
 (libraries unix logs logs.fmt coq-ditto ditto-cli-lib coq-lsp.serlib.ltac coq-lsp.coq coq-lsp.fleche)
)

(install
 (package coq-ditto)
 (section bin)
 (files
  (coq_ditto_wrapper.exe as rocq-ditto)))

(install
 (package coq-ditto)
 (files "../../vendor/fcc")
 (section bin))

(rule
 (target (dir cmdliner-support))
 (deps coq_ditto_wrapper.exe)
 (action
  (ignore-stdout
   (run cmdliner install tool-support ./coq_ditto_wrapper.exe:rocq-ditto cmdliner-support))))

(install
 (package coq-ditto)
 (section share_root)
 (dirs (cmdliner-support/share as .)))
