(library
 (public_name ditto-plugin)
 (name ditto_plugin)
 (libraries coq-ditto rocq-runtime.plugins.ltac coq-lsp.serlib.ltac coq-lsp.coq coq-lsp.petanque coq-lsp.lsp coq-lsp.fleche logs logs.fmt)
 (enabled_if (= %{coq:version.major} 9))
)

(library
 (public_name ditto-plugin)
 (name ditto_plugin)
 (libraries coq-ditto coq-core.plugins.ltac coq-lsp.serlib.ltac coq-lsp.coq coq-lsp.petanque coq-lsp.lsp coq-lsp.fleche logs logs.fmt)
 (enabled_if (< %{coq:version.major} 9))
)

(install
 (package coq-ditto)
 (files "../../vendor/fcc")
 (section bin))