(library
 (public_name target-generator-plugin)
 (name ditto_target_generator)
 (libraries coq-ditto coq-lsp.coq coq-lsp.fleche)
 (enabled_if (= %{coq:version.major} 9))
)

(library
 (public_name target-generator-plugin)
 (name ditto_target_generator)
 (libraries coq-ditto coq-lsp.coq coq-lsp.fleche)
 (enabled_if (< %{coq:version.major} 9))
)