(library
 (public_name constructivisation-data-generator-plugin)
 (name constructivisation_data_generator)
 (libraries coq-ditto rocq-runtime.plugins.ltac coq-lsp.coq coq-lsp.lsp coq-lsp.fleche)
 (enabled_if (= %{coq:version.major} 9))
 )

(library
 (public_name constructivisation-data-generator-plugin)
 (name constructivisation_data_generator)
 (libraries coq-ditto coq-core.plugins.ltac coq-lsp.coq coq-lsp.lsp coq-lsp.fleche)
 (enabled_if (< %{coq:version.major} 9))
 )
